// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryListItem renders correctly with low stock 1`] = `
<View
  accessibilityRole="summary"
  style={
    [
      {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderRadius": 8,
        "flexDirection": "row",
        "marginBottom": 8,
        "padding": 16,
      },
      {
        "backgroundColor": "#ffffff",
        "borderColor": "#e2e8f0",
      },
    ]
  }
>
  <View
    accessibilityLabel="Product type Galletas"
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 8,
          "height": 44,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 44,
        },
        {
          "backgroundColor": "#fb7185",
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontFamily": "Montserrat_600SemiBold",
          "fontSize": 18,
          "fontWeight": "700",
          "lineHeight": 28,
        }
      }
    >
      GNY
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Montserrat_400Regular",
            "fontSize": 16,
            "fontWeight": "600",
            "lineHeight": 26,
            "marginBottom": 4,
          },
          {
            "color": "#1e293b",
          },
        ]
      }
    >
      Whey Protein
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 10,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Montserrat_400Regular",
              "fontSize": 12,
              "fontWeight": "600",
              "lineHeight": 20,
            },
            {
              "color": "#fb7185",
            },
          ]
        }
      >
        Galletas
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Montserrat_400Regular",
              "fontSize": 12,
              "lineHeight": 20,
            },
            {
              "color": "#64748b",
            },
          ]
        }
      >
        Qty: 
        3
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Montserrat_400Regular",
              "fontSize": 12,
              "lineHeight": 20,
            },
            {
              "color": "#64748b",
            },
          ]
        }
      >
        $
        50
      </Text>
      <View
        accessibilityLabel="Low stock: 3 of 5"
        accessibilityRole="text"
        style={
          {
            "backgroundColor": "#FEE2E2",
            "borderRadius": 4,
            "paddingHorizontal": 8,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          style={
            {
              "color": "#DC2626",
              "fontSize": 12,
              "fontWeight": "600",
            }
          }
        >
          3
           / 
          5
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`InventoryListItem renders correctly without low stock 1`] = `
<View
  accessibilityRole="summary"
  style={
    [
      {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderRadius": 8,
        "flexDirection": "row",
        "marginBottom": 8,
        "padding": 16,
      },
      {
        "backgroundColor": "#ffffff",
        "borderColor": "#e2e8f0",
      },
    ]
  }
>
  <View
    accessibilityLabel="Product type Galletas"
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 8,
          "height": 44,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 44,
        },
        {
          "backgroundColor": "#fb7185",
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontFamily": "Montserrat_600SemiBold",
          "fontSize": 18,
          "fontWeight": "700",
          "lineHeight": 28,
        }
      }
    >
      GNY
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Montserrat_400Regular",
            "fontSize": 16,
            "fontWeight": "600",
            "lineHeight": 26,
            "marginBottom": 4,
          },
          {
            "color": "#1e293b",
          },
        ]
      }
    >
      Whey Protein
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 10,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Montserrat_400Regular",
              "fontSize": 12,
              "fontWeight": "600",
              "lineHeight": 20,
            },
            {
              "color": "#fb7185",
            },
          ]
        }
      >
        Galletas
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Montserrat_400Regular",
              "fontSize": 12,
              "lineHeight": 20,
            },
            {
              "color": "#64748b",
            },
          ]
        }
      >
        Qty: 
        10
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Montserrat_400Regular",
              "fontSize": 12,
              "lineHeight": 20,
            },
            {
              "color": "#64748b",
            },
          ]
        }
      >
        $
        50
      </Text>
    </View>
  </View>
</View>
`;
